# dronecan_gui_tool

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  winbuild.yml
dronecan_gui_tool/: main.py  setup_window.py
dronecan_gui_tool/panels/: RTK_panel.py  RemoteID_panel.py  actuator_panel.py  esc_panel.py  hobbywing_esc.py  rc_panel.py  serial_panel.py  stats_panel.py
dronecan_gui_tool/widgets/: __init__.py  about_window.py  directory_selection.py  dynamic_node_id_allocator.py  file_server.py  local_node.py  node_properties.py  subscriber.py
dronecan_gui_tool/widgets/bus_monitor/: window.py
dronecan_gui_tool/widgets/can_adapter_control_panel/: slcan_cli.py
dronecan_gui_tool/widgets/password_edit/: __init__.py  password_edit.py
dronecan_gui_tool/widgets/plotter/: plot_container.py  value_extractor_views.py  window.py
dronecan_gui_tool/widgets/plotter/plot_areas/: xy.py  yt.py
