# modern build tools use this file: https://packaging.python.org/en/latest/tutorials/packaging-projects/ 
# you need to drop setup_requires from setup.py as well.
# https://peps.python.org/pep-0518/#rationale

# [project]
# name = 'dronecan_gui_tool'
# description = 'DroneCAN Bus Management and Diagnostics App'
# license = { 'file' = 'LICENSE' }
# version = '1.2.28'
# readme = 'README.md'
# requires-python = '>=3.9'

# dependencies = [
#     'numpy == 2.0.2',
#     'dronecan == 1.0.26',
#     'PyQt6 == 6.8.1',
#     'pyqtgraph == 0.13.7',
#     'pyserial == 3.5',
#     'PyYAML == 6.0.2',
#     'QtAwesome == 1.4.0',
#     'qtconsole == 5.6.1',
#     'QtPy == 2.4.3',
#     'traitlets == 5.14.3'
# ]

[build-system]
requires = ["setuptools>=42",'setuptools_git>=1.0']
build-backend = "setuptools.build_meta"
